Padding left added to footer for spacing issue on smaller devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -64,6 +64,7 @@ html {
 }
  ul {
      list-style-type: none;
+     padding-left: 3px;
 }
  .align-right {
      display: inline;
